Todas las funciones listas

--- a/index.html
+++ b/index.html
@@ -458,6 +458,376 @@
           </div>
         </div>
       </div>
+      <!-- Segunda perte de ejercicios -------------------------------------------------------------------------->
+      <!-- Acordeón 5 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingFive">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseFive"
+            aria-expanded="false"
+            aria-controls="flush-collapseFive"
+          >
+            El mayor de los 3 números (1 al 100)
+          </button>
+        </h2>
+        <div
+          id="flush-collapseFive"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingFive"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="number1" class="visually-hidden"
+                  >Primer número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number1"
+                  max="100"
+                  min="0"
+                />
+              </div>
+              <div class="col-auto">
+                <label for="number2" class="visually-hidden"
+                  >Segundo número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number2"
+                  max="100"
+                  min="0"
+                />
+              </div>
+              <div class="col-auto">
+                <label for="number3" class="visually-hidden"
+                  >Tercer número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number3"
+                  max="100"
+                  min="0"
+                />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func5">
+                  Número mayor
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio5"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result5"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Acordeón 6 ------------------------------------------------------------------------------------------------------->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingSix">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseSix"
+            aria-expanded="false"
+            aria-controls="flush-collapseSix"
+          >
+            El menor de los 3 números (1 al 100)
+          </button>
+        </h2>
+        <div
+          id="flush-collapseSix"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingSix"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="number-1" class="visually-hidden"
+                  >Primer número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number-1"
+                  max="100"
+                  min="0"
+                />
+              </div>
+              <div class="col-auto">
+                <label for="number-2" class="visually-hidden"
+                  >Segundo número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number-2"
+                  max="100"
+                  min="0"
+                />
+              </div>
+              <div class="col-auto">
+                <label for="number-3" class="visually-hidden"
+                  >Tercer número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="number-3"
+                  max="100"
+                  min="0"
+                />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func6">
+                  Número menor
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio6"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result6"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Acordeón 7 ------------------------------------------------------------------------------------------------------->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingSeven">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseSeven"
+            aria-expanded="false"
+            aria-controls="flush-collapseSeven"
+          >
+            Adivinar un número entre el 1 y el 100 en el menor número de pasos
+            posibles
+          </button>
+        </h2>
+        <div
+          id="flush-collapseSeven"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingSeven"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="mynumber" class="visually-hidden"
+                  >Primer número</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="mynumber"
+                  max="100"
+                  min="0"
+                />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func7">
+                  OK
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio7"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result7"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Acordeón 8 ------------------------------------------------------------------------------------------------------->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingEight">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseEight"
+            aria-expanded="false"
+            aria-controls="flush-collapseEight"
+          >
+            Danos un número entre el 100 y el 200, te diremos si es un multiplo
+            de 3
+          </button>
+        </h2>
+        <div
+          id="flush-collapseEight"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingEight"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="myNum" class="visually-hidden">Primer número</label>
+                <input type="number" class="form-control" id="myNum" />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func8">
+                  OK
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio8"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result8"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Acordeón 9 ------------------------------------------------------------------------------------------------------->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingNine">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseNine"
+            aria-expanded="false"
+            aria-controls="flush-collapseNine"
+          >
+            Danos tres números, determinaremos sí uno es la suma de los otros
+            dos
+          </button>
+        </h2>
+        <div
+          id="flush-collapseNine"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingNine"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="opt1" class="visually-hidden">Primer número</label>
+                <input type="number" class="form-control" id="opt1" />
+              </div>
+
+              <div class="col-auto">
+                <label for="opt2" class="visually-hidden">Primer número</label>
+                <input type="number" class="form-control" id="opt2" />
+              </div>
+
+              <div class="col-auto">
+                <label for="opt3" class="visually-hidden">Primer número</label>
+                <input type="number" class="form-control" id="opt3" />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func9">
+                  OK
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio9"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result9"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Acordeón 10 ------------------------------------------------------------------------------------------------------->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTen">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTen"
+            aria-expanded="false"
+            aria-controls="flush-collapseTen"
+          >
+            Te diré si tu número es par o impar
+          </button>
+        </h2>
+        <div
+          id="flush-collapseTen"
+          class="accordion-collapse collapse"
+          aria-labelledby="flush-headingTen"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            <!--Body  Campos van aquí ------------------------------------------------------------------------ -->
+            <form class="row g-3">
+              <div class="col-auto">
+                <label for="evenOrOdd" class="visually-hidden"
+                  >Primer número</label
+                >
+                <input type="number" class="form-control" id="evenOrOdd" />
+              </div>
+
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3" id="func10">
+                  OK
+                </button>
+              </div>
+              <div class="col-auto">
+                <button
+                  type="submit"
+                  class="btn btn-primary mb-3"
+                  id="reinicio10"
+                >
+                  Reiniciar
+                </button>
+              </div>
+              <h3><span class="badge bg-primary" id="result10"></span></h3>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script
